# akira

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  flake.nix  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
prisma/: schema.prisma
resizer/: Cargo.toml
resizer/src/: main.rs
src/: app.tsx  icons.tsx
src/components/ui/: carousel.tsx  select.tsx
src/lib/: api.ts  chunk.ts  db.ts
src/queries/: useTags.ts
src/routes/: index.tsx  tagger.tsx
src/server/api/: kysely.ts  root.ts  s3.ts
src/server/api/routers/: files.ts  tags.ts
