[package]
name = "resizer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["http2"] }
fast_image_resize = { version = "5.1.0", features = ["image"] }
image = "0.25.5"
image-webp = "0.2.0"
reqwest = { version = "0.12.9", features = ["stream"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = "0.7.13"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
